2008-01-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-remote-process-environment): Add "LC_CTYPE=C".
	Reported by Pete Forman <pete.forman@westerngeco.com>.
	(tramp-perl-encode, tramp-perl-decode): Update copyrights.

2008-01-04  Glenn Morris  <rgm@gnu.org>

	* tramp-smb.el (tramp-smb-handle-insert-directory): Use mapc
	rather than mapcar.

2007-12-23  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.12 released.

	* tramp.el: New todo item.

	* tramp-smb.el (tramp-smb-handle-insert-directory): Handle "-F"
	switch.  Reported by Mark T. Kennedy <mkennedy@diamondbackcap.com>.

2007-12-06  D. Goel  <deego3@gmail.com>

	* trampver.el.in (x): Fix buggy call to `error'.

2007-12-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (top): Require cl only when compiling.
	Reported by Glenn Morris <rgm@gnu.org>.

2007-12-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-open-connection-setup-interactive-shell)
	(tramp-find-shell): Send only single prompt setting commands, in
	order to avoid double-prompt.

2007-12-04  Glenn Morris  <rgm@gnu.org>

	* tramp.el: Require password-cache or password.

2007-11-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-open-connection-setup-interactive-shell): Still
	some tuning in case of an echoing shell.
	(tramp-send-command): Connection property "remote-echo" is not
	persistent; cache key is the process therefore.

2007-11-18  Dan Nicolaescu  <dann@ics.uci.edu>

	* tramp.el (tramp-terminal-type): Remove duplicated definition.

2007-11-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-reread-directory-timeout): New
	defcustom.
	(tramp-handle-file-name-all-completions): Flush directory contents
	from cache regularly.
	(tramp-set-auto-save-file-modes): Check also for
	`buffer-modified-p'.
	(tramp-open-connection-setup-interactive-shell): Call
	`tramp-cleanup-connection' via funcall.
