@@ -1,3 +1,10 @@
+2008-01-08  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-handle-process-file): Handle the case wher
+	DESTINATION is a consp with t as car.
+	(tramp-wait-for-output): We shall remove exactly what has been
+	find by the search.
+
 2008-01-04  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-remote-process-environment): Add "LC_CTYPE=C".
